code-blocks-server/code-blocks/tests/rust/snapshots/rust__build_move_fn-9.snap
---
source: tests/rust/main.rs
expression: "format!(\"{}\\n\\n{}\",\n    r#\"\n    mod m1 {\n        fn foo() {}\n    }\n\n    mod m2 {\n        fn bar() {}\n    /*  ^fail */\n    }\n\n    mod m3 {\n/*  ^src */\n        fn baz() {}\n    }\n\"#,\n    result.err().unwrap())"
---

    mod m1 {
        fn foo() {}
    }

    mod m2 {
        fn bar() {}
    /*  ^fail */
    }

    mod m3 {
/*  ^src */
        fn baz() {}
    }


Can't move items to different scopes
