code-blocks-server/code-blocks/tests/rust/snapshots/rust__get_query_subtrees.snap
---
source: code-blocks/tests/rust/main.rs
expression: subtrees
---
[
    BlockTree {
        block: Block {
            nodes: [
                {Node mod_item (1, 0) - (10, 1)},
            ],
        },
        children: [
            BlockTree {
                block: Block {
                    nodes: [
                        {Node attribute_item (2, 4) - (2, 20)},
                        {Node line_comment (3, 4) - (3, 18)},
                        {Node struct_item (4, 4) - (6, 5)},
                    ],
                },
                children: [],
            },
            BlockTree {
                block: Block {
                    nodes: [
                        {Node line_comment (8, 4) - (8, 12)},
                        {Node function_item (9, 4) - (9, 20)},
                    ],
                },
                children: [],
            },
        ],
    },
    BlockTree {
        block: Block {
            nodes: [
                {Node attribute_item (12, 0) - (12, 12)},
                {Node mod_item (13, 0) - (23, 1)},
            ],
        },
        children: [
            BlockTree {
                block: Block {
                    nodes: [
                        {Node line_comment (16, 4) - (16, 16)},
                        {Node attribute_item (17, 4) - (17, 11)},
                        {Node line_comment (18, 4) - (18, 22)},
                        {Node attribute_item (19, 4) - (19, 13)},
                        {Node function_item (20, 4) - (22, 5)},
                    ],
                },
                children: [],
            },
        ],
    },
]
