code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-2.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---

mod m {
    fn bar() {}

    fn foo() {
 /* ^src */
        fn in_foo() {
            bar();
        }
    }
 /* ^dst */
}

fn baz() {}


New src start: 115
New dst start: 13
