code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-3.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---

mod m {
 /* ^src */

    fn bar() {}

    fn foo() {}}
 /* ^dst */

fn baz() {}


New src start: 53
