code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-9.snap
---
source: code-blocks/tests/rust/main.rs
expression: "format!(\"{}\\n\\n{:?}\",\n    r#\"\n    mod m1 {\n        fn foo() {}\n    }\n\n    mod m2 {\n        fn bar() {}\n    /*  ^fail */\n    }\n\n    mod m3 {\n/*  ^src */\n        fn baz() {}\n    }\n\"#,\n    result.err().unwrap())"
---

    mod m1 {
        fn foo() {}
    }

    mod m2 {
        fn bar() {}
    /*  ^fail */
    }

    mod m3 {
/*  ^src */
        fn baz() {}
    }


Illegal move operation

Caused by:
    Blocks have different parents
