code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block.snap
---
source: code-blocks/tests/rust/main.rs
expression: "code_blocks::move_block(src_block, dst_item,\n        r#\"\n    fn foo() {\n /* ^src */\n        fn in_foo() {\n            bar();\n        }\n    }\n\n    fn bar() {}\n /* ^dst */\n\"#,\n        Some(check_fn), false).unwrap()"
---

    fn bar() {}

    fn foo() {
 /* ^src */
        fn in_foo() {
            bar();
        }
    }
 /* ^dst */

