code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_down.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    mod m1 {
/*  ^src */
        fn foo() {}
    }

    mod m2 {
        fn bar() {}
    }

    mod m3 {
/*  ^dst */
        fn baz() {}
    }

---
output:

    mod m2 {
        fn bar() {}
    }

    mod m3 {
    ^ Dest
/*  ^dst */
        fn baz() {}
    }

    mod m1 {
    ^ Source
/*  ^src */
        fn foo() {}
    }
