code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_in_module.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

mod m {
    fn foo() { // src
        fn in_foo() {
            bar();
        }
    }

    fn bar() {} // dst
}

fn baz() {}

---
output:

mod m {
    fn bar() {}
    ^ Dest

    fn foo() { // src
    ^ Source
        fn in_foo() {
            bar();
        }
    } // dst
}

fn baz() {}
