code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_in_module2.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

mod m {
    fn foo() {}
 /* ^src */

    fn bar() {}}
 /* ^dst */

fn baz() {}

---
output:

mod m {
 /* ^src */

    fn bar() {}
    ^ Dest

    fn foo() {}}
    ^ Source
 /* ^dst */

fn baz() {}
