code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_into_scope_fails.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    mod m1 {
        fn foo() {}
    }

    mod m2 {
        fn bar() {} // fail
    }

    mod m3 { // src
        fn baz() {}
    }

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
