code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_outside_scope_fails.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    mod m {
        fn foo() {} // src
    }

    fn baz() {} // fail

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
